# sepa-xml-generator

./: LICENSE  README.md  cli.py  main_qt.py  output.xml  pyproject.toml
core/: models.py
data/: mapping.sample.yaml  sample.csv
sepa/: builder.py  validator.py
src/sepa_xml_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sepa_xml_generator/config/: mapping_model.py
src/sepa_xml_generator/core/: csv_loader.py
tests/: test_smoke.py
ui/: main_window.py
